<resources>
    <string name="app_name">Jalang"'"o Quotes </string>
    <string name="next">Next </string>
    <string name="theme">Theme </string>
    <string name="prev">Previous </string>
    <string name="men">Men </string>
    <string name="women">Women and Ladies</string>
    <string name="money">Prosperity </string>
    <string name="adUnit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate Us</string>
    <string name="share">Share</string>
    <string name="subtitle">Laugh and Learn</string>
    <string name="shuffle">Shuffle</string>
</resources>
